[gd_scene load_steps=6 format=3 uid="uid://emt2jjsdtt51"]

[ext_resource type="Script" path="res://scenes/world_select/world_select.gd" id="1_f5dpe"]
[ext_resource type="PackedScene" uid="uid://dpjstncel7t2h" path="res://scenes/world_select/world_icon.tscn" id="1_m26yw"]
[ext_resource type="PackedScene" uid="uid://c4sqamoe4xjor" path="res://scenes/level_select/level_select_2.tscn" id="3_1k25e"]
[ext_resource type="PackedScene" uid="uid://b5fogbj0ceycy" path="res://scenes/level_select/level_select.tscn" id="3_hc1qr"]
[ext_resource type="PackedScene" uid="uid://bbw4pskjg3wr4" path="res://scenes/world_select/player_icon.tscn" id="3_nxtpp"]

[node name="World Select" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.086
offset_bottom = 0.271973
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f5dpe")

[node name="World Icon" parent="." instance=ExtResource("1_m26yw")]
offset_left = 128.0
offset_top = 320.0
offset_right = 192.0
offset_bottom = 384.0
level_select_packed = ExtResource("3_hc1qr")

[node name="World Icon2" parent="." instance=ExtResource("1_m26yw")]
offset_left = 256.0
offset_top = 192.0
offset_right = 320.0
offset_bottom = 256.0
world_index = 2
level_select_packed = ExtResource("3_1k25e")

[node name="World Icon3" parent="." instance=ExtResource("1_m26yw")]
offset_left = 256.0
offset_top = 448.0
offset_right = 320.0
offset_bottom = 512.0
world_index = 3
level_select_packed = ExtResource("3_hc1qr")

[node name="World Icon4" parent="." instance=ExtResource("1_m26yw")]
offset_left = 384.0
offset_top = 320.0
offset_right = 448.0
offset_bottom = 384.0
world_index = 4
level_select_packed = ExtResource("3_hc1qr")

[node name="World Icon5" parent="." instance=ExtResource("1_m26yw")]
offset_left = 512.0
offset_top = 192.0
offset_right = 576.0
offset_bottom = 256.0
world_index = 5
level_select_packed = ExtResource("3_hc1qr")

[node name="World Icon6" parent="." instance=ExtResource("1_m26yw")]
offset_left = 512.0
offset_top = 448.0
offset_right = 576.0
offset_bottom = 512.0
world_index = 6
level_select_packed = ExtResource("3_hc1qr")

[node name="World Icon7" parent="." instance=ExtResource("1_m26yw")]
offset_left = 640.0
offset_top = 320.0
offset_right = 704.0
offset_bottom = 384.0
world_index = 7
level_select_packed = ExtResource("3_hc1qr")

[node name="World Icon8" parent="." instance=ExtResource("1_m26yw")]
offset_left = 768.0
offset_top = 192.0
offset_right = 832.0
offset_bottom = 256.0
world_index = 8
level_select_packed = ExtResource("3_hc1qr")

[node name="World Icon9" parent="." instance=ExtResource("1_m26yw")]
offset_left = 768.0
offset_top = 448.0
offset_right = 832.0
offset_bottom = 512.0
world_index = 9
level_select_packed = ExtResource("3_hc1qr")

[node name="World Icon10" parent="." instance=ExtResource("1_m26yw")]
offset_left = 896.0
offset_top = 320.0
offset_right = 960.0
offset_bottom = 384.0
world_index = 10
level_select_packed = ExtResource("3_hc1qr")

[node name="PlayerIcon" parent="." instance=ExtResource("3_nxtpp")]
layout_mode = 0
offset_left = 128.0
offset_top = 320.0
offset_right = 192.0
offset_bottom = 384.0
